# Alex-Fedorowicz-Sprint-3

./: Makefile  README.md  pyproject.toml  requirements.txt
burnout_analysis/: __init__.py  dataset.py  features.py  plots.py
burnout_analysis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: INST414NSSRN_Alex.ipynb  age_burnout_distribution.docx  burnout_hours_worked_kruskal_test.docx  burnout_hours_worked_statistics_AF.csv  burnout_model_variable_significance.docx  chi_square_test_age_vs_burnout.docx  logistic_regression_results_with_odds_ratios_ref_age_75.docx  mean_hours_burnout_CI_plot.docx  weighted_burnout_distribution.docx  weighted_burnout_distribution_with_resized_plot.docx  weighted_summary_and_plot_for_HRS_YR_PUF.docx
