[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "burnout_analysis"
version = "0.0.1"
description = "Exploring nurse burnout with data science"
authors = [
  { name = "Alex Fedorowicz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["burnout_analysis"]
include = ["pyproject.toml", "burnout_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["burnout_analysis"]
force-sort-within-sections = true

